# filetwiddeling

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  bashfu.sh  build.sh  build_config.cfg  dtypes.h  file_fkt.cpp  file_fkt.h  main.cpp  readfile.pro  update_GSL.sh  update_catch2.sh  update_cxxopts.sh
inc/: dtypes.h  file_fkt.h  file_list_format.h  global_config.h  posix_detect.h
src/: evaluate_args.cpp  evaluate_args.h  file_fkt.cpp  file_list.cpp  file_list.h  file_list_format.cpp  file_list_format.h  main.cpp
the_framework/copyright/: modified_4Cbsd.h  modified_bsd.h
the_framework/core/: bit_func.h  compile_guards.h  dtypes.h  fields.h  meta.h
the_framework/core/Iterators/: iterator_base_api.h  iterator_ptr_wrapper.h  iterator_unaligned_data.h
the_framework/enviroment/: architecture_detect.h  compiler_detect.h  endian_convert.h  endianness_detect.cpp  endianness_detect.h  enviroment_detection.h  gccversion.h  os_detect.h  posix_detect.h  standard_detect.cpp  standard_detect.h
the_framework/macros/: bitmacros.h  build_annotations.h  needful_macros.h
the_framework/math/: math_division.cpp  math_division.h
the_framework/strings/: Stringhelper.cpp  Stringhelper.h
the_framework/utility/: ansiconsolecolor.cpp  ansiconsolecolor.h  terminal.cpp  terminal.h
